--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html --public-url /js-11-colorswith/",
+    "build": "parcel build index.html --public-url /js-11-timer/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
